--- a/package.json
+++ b/package.json
@@ -13,30 +13,53 @@
   },
   "dependencies": {
     "@expo/vector-icons": "^12.0.0",
+    "@react-native-async-storage/async-storage": "^1.13.4",
+    "@react-native-community/datetimepicker": "^3.0.9",
+    "@react-native-community/google-signin": "^5.0.0",
     "@react-native-community/masked-view": "0.1.10",
+    "@react-native-picker/picker": "^1.9.11",
     "@react-navigation/bottom-tabs": "^5.11.1",
+    "@react-navigation/drawer": "^5.12.4",
     "@react-navigation/native": "^5.8.9",
     "@react-navigation/stack": "^5.12.6",
+    "axios": "^0.21.1",
     "expo": "~40.0.0",
     "expo-asset": "~8.2.1",
     "expo-constants": "~9.3.0",
     "expo-font": "~8.4.0",
+    "expo-google-app-auth": "^8.1.4",
+    "expo-google-sign-in": "^9.0.0",
+    "expo-image-picker": "~9.2.0",
     "expo-linking": "~2.0.0",
+    "expo-notifications": "^0.9.0",
     "expo-splash-screen": "~0.8.0",
     "expo-status-bar": "~1.0.3",
     "expo-web-browser": "~8.6.0",
+    "formik": "^2.2.6",
+    "moment": "^2.29.1",
     "react": "16.13.1",
     "react-dom": "16.13.1",
     "react-native": "https://github.com/expo/react-native/archive/sdk-40.0.1.tar.gz",
+    "react-native-autocomplete-input": "^4.2.0",
     "react-native-gesture-handler": "~1.8.0",
+    "react-native-image-crop-picker": "^0.36.0",
+    "react-native-modal": "^11.7.0",
     "react-native-safe-area-context": "3.1.9",
     "react-native-screens": "~2.15.0",
-    "react-native-web": "~0.13.12"
+    "react-native-snap-carousel": "^3.9.1",
+    "react-native-web": "~0.13.12",
+    "react-redux": "^7.2.2",
+    "redux": "^4.0.5",
+    "redux-persist": "^6.0.0",
+    "redux-thunk": "^2.3.0",
+    "yup": "^0.32.8"
   },
   "devDependencies": {
     "@babel/core": "~7.9.0",
     "@types/react": "~16.9.35",
     "@types/react-native": "~0.63.2",
+    "@types/react-native-snap-carousel": "^3.8.2",
+    "@types/react-redux": "^7.1.16",
     "jest-expo": "~40.0.0",
     "typescript": "~4.0.0"
   },
