--- a/package.json
+++ b/package.json
@@ -36,6 +36,7 @@
     "expo-status-bar": "~1.0.3",
     "expo-web-browser": "~8.6.0",
     "formik": "^2.2.6",
+    "mime": "^2.5.2",
     "moment": "^2.29.1",
     "react": "16.13.1",
     "react-dom": "16.13.1",
